added meta seo tags

--- a/src/template.html
+++ b/src/template.html
@@ -18,6 +18,16 @@
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#423155">
 	<meta name="msapplication-TileColor" content="#e7e7e7">
 
+	<meta property="og:title" content="Charlotte Lang-Bush">
+	<meta property="og:description" content="Freaky Fabulist.">
+	<meta property="og:image" content="ghost8.jpg">
+	<meta property="og:url" content="http://femmefaust.us">
+
+	<meta name="twitter:title" content="Charlotte Lang-Bush">
+	<meta name="twitter:description" content="Freaky Fabulist.">
+	<meta name="twitter:image" content=" ghost8.jpg">
+	<meta name="twitter:card" content="summary_large_image">
+
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
 	     lazily loaded when it precaches secondary pages -->
