--- a/src/template.html
+++ b/src/template.html
@@ -18,6 +18,7 @@
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#423155">
 	<meta name="msapplication-TileColor" content="#e7e7e7">
 
+	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Charlotte Lang-Bush">
 	<meta property="og:description" content="Freaky Fabulist.">
 	<meta property="og:image" content="ghost8.jpg">
