--- a/src/template.html
+++ b/src/template.html
@@ -47,5 +47,6 @@
 	     and anything else it needs to hydrate the app and
 	     initialise the router -->
 	%sapper.scripts%
+	<script async src="https://mainframe.club/embed.js" charset="utf-8"></script>
 </body>
 </html>
