--- a/src/template.html
+++ b/src/template.html
@@ -21,12 +21,12 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Charlotte Lang-Bush">
 	<meta property="og:description" content="Freaky Fabulist.">
-	<meta property="og:image" content="http://femmefaust.us/ghost8.jpg">
-	<meta property="og:url" content="http://femmefaust.us">
+	<meta property="og:image" content="https://femmefaust.us/ghost8.jpg">
+	<meta property="og:url" content="https://femmefaust.us">
 
 	<meta name="twitter:title" content="Charlotte Lang-Bush">
 	<meta name="twitter:description" content="Freaky Fabulist.">
-	<meta name="twitter:image" content="http://femmefaust.us/ghost8.jpg">
+	<meta name="twitter:image" content="https://femmefaust.us/ghost8.jpg">
 	<meta name="twitter:card" content="summary_large_image">
 
 	<!-- Sapper generates a <style> tag containing critical CSS
