pulling in social and contact, applying some styles
-moves custom elements into src
-changing favicon
-setting app styles
-bringing in social and contact to app, wrapping tsx divs so css targets it
-fixing slideshow css file imports
-troubleshooting social styling
-adding home.css file from old code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- how do I put in the favicon I imported instead of this? -->
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="src/components/assets/favicon-32x32.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#423155" />
     <title>Charlotte Lang-Bush</title>
@@ -10,5 +15,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script async src="https://web.mainframe.club/embed.js"></script>
   </body>
 </html>
