--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <!-- how do I put in the favicon I imported instead of this? -->
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="src/components/assets/favicon-32x32.png"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="theme-color" content="#423155" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#423155" />
+    <meta name="msapplication-TileColor" content="#e7e7e7" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Charlotte Lang-Bush" />
+    <meta property="og:description" content="Freaky Fabulist." />
+    <meta property="og:image" content="https://femmefaust.us/ghost8.jpg" />
+    <meta property="og:url" content="https://femmefaust.us" />
+
+    <meta name="twitter:title" content="Charlotte Lang-Bush" />
+    <meta name="twitter:description" content="Freaky Fabulist." />
+    <meta name="twitter:image" content="https://femmefaust.us/ghost8.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <title>Charlotte Lang-Bush</title>
   </head>
   <body>
